// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component presentation should render correctly when closed 1`] = `
.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-8 {
  display: inline-block;
  margin-bottom: 0rem;
  margin-top: 0rem;
}

.emotion-8:first-of-type {
  margin-top: 0;
}

.emotion-8:last-of-type {
  margin-bottom: 0;
}

.emotion-8:empty {
  display: none;
}

.emotion-6 {
  position: relative;
}

.emotion-6 input {
  padding-right: 4.5rem;
}

.emotion-2 {
  position: absolute;
  right: 2.5rem;
  background: transparent;
  border: none;
  cursor: pointer;
  height: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: 0;
  color: #696979;
  padding: 1px 6px;
}

.emotion-2:hover {
  color: #D01E29;
}

.emotion-5 {
  position: absolute;
  background-color: #F0F0F5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.25rem;
  width: 2.5rem;
  top: 1px;
  bottom: 1px;
  right: 1px;
}

.emotion-0 {
  background-color: #FFFFFF;
  border: solid 1px #8F8FA2;
  border-radius: 2px;
  color: #24252E;
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1rem;
  margin: 0;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
}

.emotion-0[type="search"]::-webkit-search-decoration {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-results-button {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-0:required {
  box-shadow: none;
}

.emotion-0::-webkit-input-placeholder {
  color: #696979;
}

.emotion-0::-moz-placeholder {
  color: #696979;
}

.emotion-0:-ms-input-placeholder {
  color: #696979;
}

.emotion-0::placeholder {
  color: #696979;
}

.emotion-0:disabled {
  border-color: #D3D4DD;
  background-color: #F0F0F5;
}

.emotion-0:not(:disabled):hover {
  border-color: #7A7B8E;
}

.emotion-0:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-0:not(:disabled):active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-1 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-4 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  border-radius: inherit;
}

.emotion-4 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-4:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-4:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-4:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-4:focus {
  box-shadow: none;
}

<div>
  <div>
    <div
      class="emotion-9"
    >
      <div
        class="emotion-8"
      >
        <div
          class="emotion-7"
        >
          <div
            class="emotion-6"
          >
            <input
              class="emotion-0"
              placeholder="mm/yyyy"
              type="text"
              value="02/2019"
            />
            <span
              class="emotion-2"
              role="button"
              tabindex="-1"
              title="Clear"
            >
              <svg
                aria-hidden="true"
                class="emotion-1"
                height="1em"
                role="img"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  clip-rule="evenodd"
                  d="M8.071 6.657l4.243 4.242 4.242-4.242c.464-.48.935-.48 1.415 0s.48.95 0 1.414l-4.243 4.243 4.243 4.242c.471.472.471.943 0 1.415-.472.471-.943.471-1.415 0l-4.242-4.243L8.07 17.97c-.46.482-.932.482-1.414 0-.482-.483-.482-.954 0-1.415l4.242-4.242L6.657 8.07c-.472-.47-.472-.942 0-1.414s.943-.472 1.414 0v.001z"
                />
              </svg>
            </span>
            <span
              class="emotion-5"
            >
              <button
                class="emotion-4"
                tabindex="-1"
                type="button"
              >
                <span>
                  <svg
                    aria-hidden="true"
                    class="emotion-1"
                    height="1em"
                    role="img"
                    viewBox="0 0 24 24"
                    width="1em"
                  >
                    <path
                      d="M6 4h1V3c-.002-.667.33-1 1-1 .67 0 1.004.333 1.004 1v1H15V2.941c0-.627.333-.941 1-.941s1 .314 1 .941V4h1c1.333 0 2 .667 2 2v14c0 1.333-.667 2-2 2H6c-1.333 0-2-.667-2-2V6.004C4 4.668 4.667 4 6 4zm0 16h12V10H6v10zM6 6v2h12V6H6zm3 8c-.667.001-1-.332-1-1 0-.668.335-1.001 1.002-1H10c.667 0 1 .333 1 1s-.333 1-1 1H9zm5 0c-.667.001-1-.332-1-1 0-.668.335-1.001 1.002-1H15c.667 0 1 .333 1 1s-.333 1-1 1h-1zm-5 4c-.667.001-1-.332-1-1 0-.668.335-1.001 1.002-1H10c.667 0 1 .333 1 1s-.333 1-1 1H9zm5 0c-.667.001-1-.332-1-1 0-.668.335-1.001 1.002-1H15c.667 0 1 .333 1 1s-.333 1-1 1h-1z"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Component presentation should render correctly when opened 1`] = `
.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-8 {
  display: inline-block;
  margin-bottom: 0rem;
  margin-top: 0rem;
}

.emotion-8:first-of-type {
  margin-top: 0;
}

.emotion-8:last-of-type {
  margin-bottom: 0;
}

.emotion-8:empty {
  display: none;
}

.emotion-6 {
  position: relative;
}

.emotion-6 input {
  padding-right: 4.5rem;
}

.emotion-2 {
  position: absolute;
  right: 2.5rem;
  background: transparent;
  border: none;
  cursor: pointer;
  height: 100%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: 0;
  color: #696979;
  padding: 1px 6px;
}

.emotion-2:hover {
  color: #D01E29;
}

.emotion-5 {
  position: absolute;
  background-color: #F0F0F5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0.25rem;
  width: 2.5rem;
  top: 1px;
  bottom: 1px;
  right: 1px;
}

.emotion-0 {
  background-color: #FFFFFF;
  border: solid 1px #8F8FA2;
  border-radius: 2px;
  color: #24252E;
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1rem;
  margin: 0;
  padding: calc(0.5rem - 1px) 0.5rem;
  width: 100%;
  -webkit-transition-property: box-shadow;
  transition-property: box-shadow;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
}

.emotion-0[type="search"]::-webkit-search-decoration {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-cancel-button {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-results-button {
  display: none;
}

.emotion-0[type="search"]::-webkit-search-results-decoration {
  display: none;
}

.emotion-0:required {
  box-shadow: none;
}

.emotion-0::-webkit-input-placeholder {
  color: #696979;
}

.emotion-0::-moz-placeholder {
  color: #696979;
}

.emotion-0:-ms-input-placeholder {
  color: #696979;
}

.emotion-0::placeholder {
  color: #696979;
}

.emotion-0:disabled {
  border-color: #D3D4DD;
  background-color: #F0F0F5;
}

.emotion-0:not(:disabled):hover {
  border-color: #7A7B8E;
}

.emotion-0:not(:disabled):focus {
  outline: none;
  box-shadow: 0 0 0 2px #F0F0F5,0 0 0 4px #0069D0;
}

.emotion-0:not(:disabled):active {
  border-color: #0069D0;
  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.09);
}

.emotion-1 {
  fill: currentColor;
  font-size: 1.5rem;
}

.emotion-4 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
  border-radius: inherit;
}

.emotion-4 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-4:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-4:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-4:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-4:focus {
  box-shadow: none;
}

.emotion-44 {
  z-index: 1200;
  position: absolute;
  left: 0;
  top: 0;
}

.emotion-43 {
  background-color: #FFFFFF;
  display: inline-block;
  padding: 1rem;
  border: 1px solid #D3D4DD;
  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.2),0 3px 1px -2px rgba(0,0,0,0.12),0 2px 2px 0 rgba(0,0,0,0.14);
  border-radius: 2px;
}

.emotion-42 {
  margin: -0.25rem -0.25rem;
  display: grid;
  grid-template-columns: repeat(3,1fr);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-12 {
  text-align: center;
  margin: 0.25rem 0.25rem;
  border-radius: 0.25rem;
}

.emotion-11 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  padding: calc(0.25rem - 1px) calc(0.5rem - 1px);
}

.emotion-11 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-11:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-11:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-11:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-13 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5;
  color: #24252E;
  font-size: 0.875rem;
  font-weight: bold;
}

.emotion-18 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  padding: calc(0.75rem - 1px) 1rem;
  padding: calc(0.25rem - 1px) 1rem;
  -webkit-transition-property: background;
  transition-property: background;
  min-width: 70px;
}

.emotion-18 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-18:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-18:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-18:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-20 {
  font-family: "IBM Plex Sans",sans-serif;
  font-size: 0.8125rem;
  line-height: 1.5rem;
  color: #24252E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: all .2s;
  transition: all .2s;
  font-weight: bold;
  cursor: pointer;
  background-color: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  color: #24252E;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  padding: calc(0.75rem - 1px) 1rem;
  padding: calc(0.25rem - 1px) 1rem;
  -webkit-transition-property: background;
  transition-property: background;
  min-width: 70px;
  background: #0069D0;
  color: #FFFFFF;
}

.emotion-20 > span {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-20:not(:disabled):active {
  box-shadow: inset 0 2px 8px 0 rgba(0,0,0,0.1);
}

.emotion-20:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0069D0;
}

.emotion-20:not(:disabled):hover {
  background-color: rgba(58,58,71,0.1);
}

.emotion-20:hover {
  background: #0069D0!important;
  color: #FFFFFF;
}

<div>
  <div>
    <div
      class="emotion-9"
    >
      <div
        class="emotion-8"
      >
        <div
          class="emotion-7"
        >
          <div
            class="emotion-6"
          >
            <input
              class="emotion-0"
              placeholder="mm/yyyy"
              type="text"
              value="02/2019"
            />
            <span
              class="emotion-2"
              role="button"
              tabindex="-1"
              title="Clear"
            >
              <svg
                aria-hidden="true"
                class="emotion-1"
                height="1em"
                role="img"
                viewBox="0 0 24 24"
                width="1em"
              >
                <path
                  clip-rule="evenodd"
                  d="M8.071 6.657l4.243 4.242 4.242-4.242c.464-.48.935-.48 1.415 0s.48.95 0 1.414l-4.243 4.243 4.243 4.242c.471.472.471.943 0 1.415-.472.471-.943.471-1.415 0l-4.242-4.243L8.07 17.97c-.46.482-.932.482-1.414 0-.482-.483-.482-.954 0-1.415l4.242-4.242L6.657 8.07c-.472-.47-.472-.942 0-1.414s.943-.472 1.414 0v.001z"
                />
              </svg>
            </span>
            <span
              class="emotion-5"
            >
              <button
                class="emotion-4"
                tabindex="-1"
                type="button"
              >
                <span>
                  <svg
                    aria-hidden="true"
                    class="emotion-1"
                    height="1em"
                    role="img"
                    viewBox="0 0 24 24"
                    width="1em"
                  >
                    <path
                      d="M6 4h1V3c-.002-.667.33-1 1-1 .67 0 1.004.333 1.004 1v1H15V2.941c0-.627.333-.941 1-.941s1 .314 1 .941V4h1c1.333 0 2 .667 2 2v14c0 1.333-.667 2-2 2H6c-1.333 0-2-.667-2-2V6.004C4 4.668 4.667 4 6 4zm0 16h12V10H6v10zM6 6v2h12V6H6zm3 8c-.667.001-1-.332-1-1 0-.668.335-1.001 1.002-1H10c.667 0 1 .333 1 1s-.333 1-1 1H9zm5 0c-.667.001-1-.332-1-1 0-.668.335-1.001 1.002-1H15c.667 0 1 .333 1 1s-.333 1-1 1h-1zm-5 4c-.667.001-1-.332-1-1 0-.668.335-1.001 1.002-1H10c.667 0 1 .333 1 1s-.333 1-1 1H9zm5 0c-.667.001-1-.332-1-1 0-.668.335-1.001 1.002-1H15c.667 0 1 .333 1 1s-.333 1-1 1h-1z"
                    />
                  </svg>
                </span>
              </button>
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-44"
      data-testid="MonthField.popup"
    >
      <div
        class="emotion-43"
      >
        <div
          class="emotion-42"
        >
          <div
            class="emotion-12"
          >
            <button
              class="emotion-11"
              title="Previous year"
              type="button"
            >
              <span>
                <svg
                  aria-hidden="true"
                  class="emotion-1"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    clip-rule="evenodd"
                    d="M14.707 16.294a1 1 0 11-1.414 1.414l-5-5a1 1 0 010-1.414l5.001-5.001a1 1 0 011.414 1.414l-4.294 4.294 4.293 4.293z"
                  />
                </svg>
              </span>
            </button>
          </div>
          <div
            class="emotion-12"
          >
            <span
              class="emotion-13"
            >
              2019
            </span>
          </div>
          <div
            class="emotion-12"
          >
            <button
              class="emotion-11"
              title="Next year"
              type="button"
            >
              <span>
                <svg
                  aria-hidden="true"
                  class="emotion-1"
                  height="1em"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    clip-rule="evenodd"
                    d="M8.294 7.707a1 1 0 111.414-1.414l5 5a1 1 0 010 1.414l-5 5.001a1 1 0 01-1.415-1.414L12.587 12 8.294 7.707z"
                  />
                </svg>
              </span>
            </button>
          </div>
          <div
            class="emotion-12"
          >
            <button
              class="emotion-18"
              title="January"
              type="button"
            >
              <span>
                Jan
              </span>
            </button>
          </div>
          <div
            class="emotion-12"
          >
            <button
              class="emotion-20"
              title="February"
              type="button"
            >
              <span>
                Feb
              </span>
            </button>
          </div>
          <div
            class="emotion-12"
          >
            <button
              class="emotion-18"
              title="March"
              type="button"
            >
              <span>
                Mar
              </span>
            </button>
          </div>
          <div
            class="emotion-12"
          >
            <button
              class="emotion-18"
              title="April"
              type="button"
            >
              <span>
                Apr
              </span>
            </button>
          </div>
          <div
            class="emotion-12"
          >
            <button
              class="emotion-18"
              title="May"
              type="button"
            >
              <span>
                May
              </span>
            </button>
          </div>
          <div
            class="emotion-12"
          >
            <button
              class="emotion-18"
              title="June"
              type="button"
            >
              <span>
                Jun
              </span>
            </button>
          </div>
          <div
            class="emotion-12"
          >
            <button
              class="emotion-18"
              title="July"
              type="button"
            >
              <span>
                Jul
              </span>
            </button>
          </div>
          <div
            class="emotion-12"
          >
            <button
              class="emotion-18"
              title="August"
              type="button"
            >
              <span>
                Aug
              </span>
            </button>
          </div>
          <div
            class="emotion-12"
          >
            <button
              class="emotion-18"
              title="September"
              type="button"
            >
              <span>
                Sep
              </span>
            </button>
          </div>
          <div
            class="emotion-12"
          >
            <button
              class="emotion-18"
              title="October"
              type="button"
            >
              <span>
                Oct
              </span>
            </button>
          </div>
          <div
            class="emotion-12"
          >
            <button
              class="emotion-18"
              title="November"
              type="button"
            >
              <span>
                Nov
              </span>
            </button>
          </div>
          <div
            class="emotion-12"
          >
            <button
              class="emotion-18"
              title="December"
              type="button"
            >
              <span>
                Dec
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
